--- a/accounting-reporting/reports/IncomeStatementDetailsTemplate.jrxml
+++ b/accounting-reporting/reports/IncomeStatementDetailsTemplate.jrxml
@@ -8,16 +8,16 @@
 	<title>
 		<band height="55" splitType="Stretch">
 			<textField>
-				<reportElement style="INVOICE_TX_18B" x="0" y="0" width="234" height="32" uuid="ef3c179c-4291-4afa-a123-7d4a359192f0"/>
+				<reportElement style="TITLE" x="0" y="0" width="234" height="32" uuid="ef3c179c-4291-4afa-a123-7d4a359192f0"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("IncomeStatement_title")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10" x="0" y="32" width="100" height="20" uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2"/>
+				<reportElement style="STD_10" x="0" y="32" width="100" height="20" uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.bindAsDate("from", "timeFrame.from")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10" x="100" y="32" width="100" height="20" uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2"/>
+				<reportElement style="STD_10" x="100" y="32" width="100" height="20" uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.bindAsDate("until", "timeFrame.until")]]></textFieldExpression>
 			</textField>
@@ -26,17 +26,17 @@
 	<pageHeader>
 		<band height="21" splitType="Stretch">
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="234" y="0" width="75" height="20" uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2"/>
+				<reportElement style="STD_10B" x="234" y="0" width="75" height="20" uuid="c8508bbd-eeb6-478e-90d8-7a00fad192e2"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("netTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="309" y="0" width="75" height="20" uuid="d2c231c7-c4f3-4d41-a880-8d0b44ae5caa"/>
+				<reportElement style="STD_10B" x="309" y="0" width="75" height="20" uuid="d2c231c7-c4f3-4d41-a880-8d0b44ae5caa"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("taxTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="384" y="0" width="75" height="20" uuid="4919ef3b-79e9-4e5e-93aa-789247b5f16c"/>
+				<reportElement style="STD_10B" x="384" y="0" width="75" height="20" uuid="4919ef3b-79e9-4e5e-93aa-789247b5f16c"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("grossTitle")]]></textFieldExpression>
 			</textField>
@@ -48,7 +48,7 @@
 	<detail>
 		<band height="23" splitType="Stretch">
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="0" y="0" width="234" height="20" uuid="92a666e5-b5b0-4a7b-8219-644a3c9ab325"/>
+				<reportElement style="STD_10B" x="0" y="0" width="234" height="20" uuid="92a666e5-b5b0-4a7b-8219-644a3c9ab325"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("revenueTitle")]]></textFieldExpression>
 			</textField>
@@ -56,17 +56,17 @@
 				<reportElement x="0" y="22" width="459" height="1" uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="234" y="0" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
+				<reportElement style="STD_10B" x="234" y="0" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("totalRevenue.net")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="309" y="0" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_10B" x="309" y="0" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("totalRevenue.tax")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="384" y="0" width="75" height="20" uuid="cc291e2d-824e-4701-aa57-cf94c4fde19c"/>
+				<reportElement style="STD_10B" x="384" y="0" width="75" height="20" uuid="cc291e2d-824e-4701-aa57-cf94c4fde19c"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("totalRevenue.gross")]]></textFieldExpression>
 			</textField>
@@ -74,22 +74,22 @@
 		<band height="42" splitType="Stretch">
 			<printWhenExpression><![CDATA[$P{wrapper}.getRaw("operatingExpenseCategories") != null]]></printWhenExpression>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="0" y="1" width="234" height="20" uuid="b17fd87b-0fb9-437b-afc8-c0db821a7167"/>
+				<reportElement style="STD_10B" x="0" y="1" width="234" height="20" uuid="b17fd87b-0fb9-437b-afc8-c0db821a7167"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[de.togginho.accounting.model.ExpenseType.OPEX.getTranslatedString()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="234" y="1" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
+				<reportElement style="STD_10B" x="234" y="1" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("operatingExpenses.totalCost.net")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="309" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_10B" x="309" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("operatingExpenses.totalCost.tax")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="384" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_10B" x="384" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("operatingExpenses.totalCost.gross")]]></textFieldExpression>
 			</textField>
@@ -105,22 +105,22 @@
 				<reportElement x="0" y="0" width="459" height="1" uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_12B" x="0" y="1" width="234" height="20" uuid="e53848f5-a745-407b-b58a-3c8830d830e8"/>
+				<reportElement style="STD_12B" x="0" y="1" width="234" height="20" uuid="e53848f5-a745-407b-b58a-3c8830d830e8"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("operatingProfitTitle")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_12B" x="234" y="1" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
+				<reportElement style="STD_12B" x="234" y="1" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("grossProfit.net")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_12B" x="309" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_12B" x="309" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("grossProfit.tax")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_12B" x="384" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_12B" x="384" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("grossProfit.gross")]]></textFieldExpression>
 			</textField>
@@ -131,17 +131,17 @@
 		<band height="42" splitType="Stretch">
 			<printWhenExpression><![CDATA[$P{wrapper}.getRaw("depreciation") != null]]></printWhenExpression>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="0" y="0" width="234" height="20" uuid="e53848f5-a745-407b-b58a-3c8830d830e8"/>
+				<reportElement style="STD_10B" x="0" y="0" width="234" height="20" uuid="e53848f5-a745-407b-b58a-3c8830d830e8"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("depreciationTitle")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="384" y="0" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_10B" x="384" y="0" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("depreciation.net")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="234" y="0" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
+				<reportElement style="STD_10B" x="234" y="0" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("depreciation.gross")]]></textFieldExpression>
 			</textField>
@@ -157,22 +157,22 @@
 				<reportElement x="0" y="0" width="459" height="1" uuid="4f001b84-9a9f-4cc2-a29e-84461e7e8929"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_12B" x="0" y="1" width="234" height="20" uuid="e53848f5-a745-407b-b58a-3c8830d830e8"/>
+				<reportElement style="STD_12B" x="0" y="1" width="234" height="20" uuid="e53848f5-a745-407b-b58a-3c8830d830e8"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("ebitTitle")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_12B" x="234" y="1" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
+				<reportElement style="STD_12B" x="234" y="1" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("ebit.net")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_12B" x="309" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_12B" x="309" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("ebit.tax")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_12B" x="384" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_12B" x="384" y="1" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("ebit.gross")]]></textFieldExpression>
 			</textField>
@@ -183,22 +183,22 @@
 		<band height="52" splitType="Stretch">
 			<printWhenExpression><![CDATA[$P{wrapper}.getRaw("capitalExpenseCategories") != null]]></printWhenExpression>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="0" y="10" width="234" height="20" uuid="b17fd87b-0fb9-437b-afc8-c0db821a7167"/>
+				<reportElement style="STD_10B" x="0" y="10" width="234" height="20" uuid="b17fd87b-0fb9-437b-afc8-c0db821a7167"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[de.togginho.accounting.model.ExpenseType.CAPEX.getTranslatedString()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="234" y="10" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
+				<reportElement style="STD_10B" x="234" y="10" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("capitalExpenses.totalCost.net")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="309" y="10" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_10B" x="309" y="10" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("capitalExpenses.totalCost.tax")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="384" y="10" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_10B" x="384" y="10" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("capitalExpenses.totalCost.gross")]]></textFieldExpression>
 			</textField>
@@ -211,22 +211,22 @@
 		<band height="50" splitType="Stretch">
 			<printWhenExpression><![CDATA[$P{wrapper}.getRaw("otherExpenseCategories") != null]]></printWhenExpression>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="0" y="10" width="234" height="20" uuid="e53848f5-a745-407b-b58a-3c8830d830e8"/>
+				<reportElement style="STD_10B" x="0" y="10" width="234" height="20" uuid="e53848f5-a745-407b-b58a-3c8830d830e8"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[de.togginho.accounting.model.ExpenseType.OTHER.getTranslatedString()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="234" y="10" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
+				<reportElement style="STD_10B" x="234" y="10" width="75" height="20" uuid="89298149-8152-47ae-84be-4ef44bc197b4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("otherExpenses.totalCost.net")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="309" y="10" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_10B" x="309" y="10" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("otherExpenses.totalCost.tax")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10B" x="384" y="10" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
+				<reportElement style="STD_10B" x="384" y="10" width="75" height="20" uuid="6096822e-a757-43d5-926b-1dda4a5bb868"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("otherExpenses.totalCost.gross")]]></textFieldExpression>
 			</textField>
