--- a/accounting-reporting/reports/ExpenseDetailsSubreport.jrxml
+++ b/accounting-reporting/reports/ExpenseDetailsSubreport.jrxml
@@ -8,39 +8,39 @@
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<detail>
-		<band height="20" splitType="Stretch">
+		<band height="15" splitType="Stretch">
 			<textField>
-				<reportElement uuid="df68c526-a9f2-49c7-828f-3a85c1bd74c5" style="INVOICE_TX_10" x="0" y="0" width="100" height="20"/>
+				<reportElement uuid="df68c526-a9f2-49c7-828f-3a85c1bd74c5" style="STD_10" x="0" y="0" width="100" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{wrapper}.formatAsDate("paymentDate")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="4c9c542a-7768-40b6-90b6-281805b730c5" style="INVOICE_TX_10" x="100" y="0" width="215" height="20"/>
+				<reportElement uuid="4c9c542a-7768-40b6-90b6-281805b730c5" style="STD_10" x="100" y="0" width="215" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{wrapper}.get("description")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="4c9c542a-7768-40b6-90b6-281805b730c5" style="INVOICE_TX_10" x="315" y="0" width="110" height="20"/>
+				<reportElement uuid="4c9c542a-7768-40b6-90b6-281805b730c5" style="STD_10" x="315" y="0" width="110" height="15"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$F{wrapper}.get("category")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="62e7fb97-5a2e-4f29-9565-f447029913e8" style="INVOICE_TX_10" x="425" y="0" width="100" height="20"/>
+				<reportElement uuid="62e7fb97-5a2e-4f29-9565-f447029913e8" style="STD_10" x="425" y="0" width="100" height="15"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{wrapper}.formatAsCurrency("netAmount")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="e9f4a598-eb1c-41e1-a1a7-a8615d853d44" style="INVOICE_TX_10" x="525" y="0" width="35" height="20"/>
+				<reportElement uuid="e9f4a598-eb1c-41e1-a1a7-a8615d853d44" style="STD_10" x="525" y="0" width="35" height="15"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{wrapper}.formatAsPercentage("taxRate.rate", "-")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="65ca6b1a-f10d-4fc0-af7c-cdca8a161409" style="INVOICE_TX_10" x="560" y="0" width="100" height="20"/>
+				<reportElement uuid="65ca6b1a-f10d-4fc0-af7c-cdca8a161409" style="STD_10" x="560" y="0" width="100" height="15"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{wrapper}.formatAsCurrency("CALCULATED_TOTAL.tax")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="832f0428-f50c-4694-813d-eaa09b8b8694" style="INVOICE_TX_10" x="660" y="0" width="100" height="20"/>
+				<reportElement uuid="832f0428-f50c-4694-813d-eaa09b8b8694" style="STD_10" x="660" y="0" width="100" height="15"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$F{wrapper}.formatAsCurrency("CALCULATED_TOTAL.gross")]]></textFieldExpression>
 			</textField>
