--- a/accounting-reporting/reports/ExpensesTemplate.jrxml
+++ b/accounting-reporting/reports/ExpensesTemplate.jrxml
@@ -11,32 +11,32 @@
 	<pageHeader>
 		<band height="58" splitType="Stretch">
 			<textField>
-				<reportElement style="INVOICE_TX_18B" x="0" y="0" width="300" height="32" uuid="07aff601-c50a-4a95-ab60-cd31f46d9921">
+				<reportElement style="TITLE" x="0" y="0" width="300" height="32" uuid="07aff601-c50a-4a95-ab60-cd31f46d9921">
 					<printWhenExpression><![CDATA[((java.util.Set)$P{wrapper}.getRaw("includedTypes")).size() > 1]]></printWhenExpression>
 				</reportElement>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("expensesTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_18B" x="0" y="0" width="300" height="32" uuid="5d8a36c8-d9c2-41a9-8624-8db89dbab2f4">
+				<reportElement style="TITLE" x="0" y="0" width="300" height="32" uuid="5d8a36c8-d9c2-41a9-8624-8db89dbab2f4">
 					<printWhenExpression><![CDATA[((java.util.Set)$P{wrapper}.getRaw("includedTypes")).size() == 1]]></printWhenExpression>
 				</reportElement>
 				<textFieldExpression><![CDATA[((de.togginho.accounting.model.ExpenseType)((java.util.Set)$P{wrapper}.getRaw("includedTypes")).iterator().next()).getTranslatedString()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10" x="0" y="37" width="100" height="20" uuid="698d58cb-c96f-4e92-9576-97b460e98182"/>
+				<reportElement style="STD_10" x="0" y="37" width="100" height="20" uuid="698d58cb-c96f-4e92-9576-97b460e98182"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.bindAsDate("from", "timeFrame.from")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10" x="100" y="37" width="100" height="20" uuid="ce7b6373-4733-4c45-b95c-758a3ca2b471"/>
+				<reportElement style="STD_10" x="100" y="37" width="100" height="20" uuid="ce7b6373-4733-4c45-b95c-758a3ca2b471"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.bindAsDate("until", "timeFrame.until")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_08" x="737" y="0" width="15" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
+				<reportElement style="PAGE_NUMBER" x="737" y="0" width="15" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER} + "/"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement style="INVOICE_TX_08" x="752" y="0" width="10" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
+				<reportElement style="PAGE_NUMBER" x="752" y="0" width="10" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -47,37 +47,37 @@
 				<reportElement x="0" y="0" width="762" height="1" uuid="ae5b046e-5504-4983-94ec-3dc19b1cff71"/>
 			</line>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="0" y="2" width="100" height="20" uuid="c52a3fcc-77b6-459a-814f-65dd668ae30d"/>
+				<reportElement style="STD_10B" x="0" y="2" width="100" height="20" uuid="c52a3fcc-77b6-459a-814f-65dd668ae30d"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("dateTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="100" y="2" width="215" height="20" uuid="c26da9f2-ed1e-4f3d-834b-d5bd376da8d5"/>
+				<reportElement style="STD_10B" x="100" y="2" width="215" height="20" uuid="c26da9f2-ed1e-4f3d-834b-d5bd376da8d5"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("descriptionTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="315" y="2" width="110" height="20" uuid="c26da9f2-ed1e-4f3d-834b-d5bd376da8d5"/>
+				<reportElement style="STD_10B" x="315" y="2" width="110" height="20" uuid="c26da9f2-ed1e-4f3d-834b-d5bd376da8d5"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("expenseCategoryTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="425" y="2" width="100" height="20" uuid="c694f790-df05-42fc-8104-54789353f80f"/>
+				<reportElement style="STD_10B" x="425" y="2" width="100" height="20" uuid="c694f790-df05-42fc-8104-54789353f80f"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("netPriceTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="525" y="2" width="35" height="20" uuid="9e4c876d-06eb-4808-85a1-338805aee207"/>
+				<reportElement style="STD_10B" x="525" y="2" width="35" height="20" uuid="9e4c876d-06eb-4808-85a1-338805aee207"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("taxRateTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="560" y="2" width="100" height="20" uuid="acef87f7-ad14-4ef6-9674-e95c3379e680"/>
+				<reportElement style="STD_10B" x="560" y="2" width="100" height="20" uuid="acef87f7-ad14-4ef6-9674-e95c3379e680"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("taxAmountTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_10B" x="660" y="2" width="100" height="20" uuid="749c78f7-686c-42dc-8da1-e7d867197ad4"/>
+				<reportElement style="STD_10B" x="660" y="2" width="100" height="20" uuid="749c78f7-686c-42dc-8da1-e7d867197ad4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("grossPriceTitle")]]></textFieldExpression>
 			</textField>
@@ -87,9 +87,9 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="20" splitType="Stretch">
+		<band height="15" splitType="Stretch">
 			<subreport>
-				<reportElement x="0" y="0" width="802" height="20" uuid="aa170f25-53ea-4aef-b4de-ed501e1b764a"/>
+				<reportElement x="0" y="0" width="802" height="15" uuid="aa170f25-53ea-4aef-b4de-ed501e1b764a"/>
 				<dataSourceExpression><![CDATA[$P{wrapper}.getAsDataSource("expenses")]]></dataSourceExpression>
 				<subreportExpression><![CDATA["/reports/ExpenseDetailsSubreport.jasper"]]></subreportExpression>
 			</subreport>
@@ -101,22 +101,19 @@
 				<reportElement x="0" y="0" width="762" height="1" uuid="ae5b046e-5504-4983-94ec-3dc19b1cff71"/>
 			</line>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="325" y="1" width="100" height="20" uuid="751c3233-3d08-4167-8611-ffd45e9e1817"/>
+				<reportElement style="STD_12B" x="325" y="5" width="100" height="20" uuid="751c3233-3d08-4167-8611-ffd45e9e1817"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("sumTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="425" y="1" width="100" height="20" uuid="002205cc-b104-4a18-85c9-59f3a3370374"/>
-				<textElement textAlignment="Right"/>
+				<reportElement style="PRICE_SUM_12B" x="425" y="5" width="100" height="20" uuid="002205cc-b104-4a18-85c9-59f3a3370374"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("totalCost.net")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="560" y="1" width="100" height="20" uuid="94351fdd-1aab-4449-b7c4-6897a78b92a8"/>
-				<textElement textAlignment="Right"/>
+				<reportElement style="PRICE_SUM_12B" x="560" y="5" width="100" height="20" uuid="94351fdd-1aab-4449-b7c4-6897a78b92a8"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("totalCost.tax")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="INVOICE_TX_12B" x="660" y="1" width="100" height="20" uuid="94351fdd-1aab-4449-b7c4-6897a78b92a8"/>
-				<textElement textAlignment="Right"/>
+				<reportElement style="PRICE_SUM_12B" x="660" y="5" width="100" height="20" uuid="0daed759-b04d-4c18-a58b-42d2ab75fa0d"/>
 				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("totalCost.gross")]]></textFieldExpression>
 			</textField>
 		</band>
