--- a/accounting-reporting/reports/CompanyHeader.jrxml
+++ b/accounting-reporting/reports/CompanyHeader.jrxml
@@ -22,7 +22,7 @@
 				</textField>
 			</frame>
 			<frame>
-				<reportElement x="0" y="100" width="245" height="70" isPrintWhenDetailOverflows="true" uuid="8bce3f17-4b4c-49e2-8bd0-3f1ec85ebddb">
+				<reportElement x="0" y="100" width="245" height="90" isPrintWhenDetailOverflows="true" uuid="8bce3f17-4b4c-49e2-8bd0-3f1ec85ebddb">
 					<printWhenExpression><![CDATA[$P{client} != null]]></printWhenExpression>
 				</reportElement>
 				<textField>
@@ -33,12 +33,16 @@
 					<reportElement style="STD_12" x="0" y="17" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="6fb95b3b-b019-4171-9b92-5901345f5fde"/>
 					<textFieldExpression><![CDATA[$P{client}.get("name")]]></textFieldExpression>
 				</textField>
+				<textField isBlankWhenNull="true">
+					<reportElement style="STD_12" x="0" y="35" width="245" height="16" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" uuid="6558d86e-2408-4881-a621-7c5b715f8c38"/>
+					<textFieldExpression><![CDATA[$P{client}.get("address.recipientDetail")]]></textFieldExpression>
+				</textField>
 				<textField>
-					<reportElement style="STD_12" x="0" y="35" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="13b463bf-be3c-40d2-9813-112c21e2327a"/>
+					<reportElement style="STD_12" x="0" y="51" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="13b463bf-be3c-40d2-9813-112c21e2327a"/>
 					<textFieldExpression><![CDATA[$P{client}.get("address.street")]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement style="STD_12" x="0" y="54" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="df961f60-6acb-429d-9a3b-24318af72196"/>
+					<reportElement style="STD_12" x="0" y="70" width="245" height="16" isPrintWhenDetailOverflows="true" uuid="df961f60-6acb-429d-9a3b-24318af72196"/>
 					<textFieldExpression><![CDATA[$P{client}.get("address.postalCode") + " " + $P{client}.get("address.city")]]></textFieldExpression>
 				</textField>
 			</frame>
